<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/incButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintEnd_toStartOf="@+id/decButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_up_arrow"
        android:contentDescription="@string/UpBtnDesc"
        android:background="@color/primary"
        android:tint="@color/white"
        android:onClick="increaseTime"/>

    <ImageButton
        android:id="@+id/decButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/incButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_down_arrow"
        android:contentDescription="@string/DownBtnDesc"
        android:background="@color/primary"
        android:tint="@color/white"
        android:onClick="decreaseTime"/>

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/titleLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/timeView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/focus_padding"
        tools:text=":30"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unitsOfTimer"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeView" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regular_padding"
        android:text="@string/startButtonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeView"
        android:onClick="start"/>

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regular_padding"
        android:text="@string/stopBtnLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/resetButton"
        app:layout_constraintRight_toRightOf="@+id/startButton"
        app:layout_constraintTop_toBottomOf="@+id/timeView"
        android:onClick="stop"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regular_padding"
        android:text="@string/resetBtnLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeView"
        tools:layout_editor_absoluteX="300dp"
        tools:layout_editor_absoluteY="650dp"
        android:onClick="reset"/>

</androidx.constraintlayout.widget.ConstraintLayout>